# dynmap

./: .gitignore  .gitmodules  README-Calibration.txt  README.md  README.txt
data/: calibration-default.yml  calibration-projector.yml  reference-model.pcd
src/: CMakeLists.txt  pairwise_registration.cpp
src/dynmap/: AppController.cpp  AppController.h  AppModel.cpp  AppModel.h  AppModelData.cpp  AppModelData.h  CMakeLists.txt  common.h  displaymodes.h  main.cpp  operationmodes.h
src/dynmap/calibration/: RGBDemoCalibration.cpp  RGBDemoCalibration.h
src/dynmap/filter/: ModelAcquisitionPipeline.cpp  ModelAcquisitionPipeline.h  PclPassThroughFilter.cpp  PclPassThroughFilter.h  PclPlaneFilter.cpp  PclPlaneFilter.h  PclVoxelGridFilter.cpp  PclVoxelGridFilter.h  PickedClusterFilter.cpp  PickedClusterFilter.h  TrackingPipeline.cpp  TrackingPipeline.h
src/dynmap/grabber/: PclOpenNIGrabber.cpp  PclOpenNIGrabber.h
src/dynmap/gui/: OpenGLFullscreen.cpp  OpenGLFullscreen.h  OpenGLFullscreen.ui  PclFullscreen.cpp  PclFullscreen.h  PclFullscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/dynmap/helper/: ScopeTimeWatch.cpp  ScopeTimeWatch.h
